Design Review from ERS - Fixed icon/link spacing for new contact nav - Fixed slider header section top padding to match homepage.

--- a/wp-content/themes/ERS/assets/styles/components/_paperclip-bootstrap.less
+++ b/wp-content/themes/ERS/assets/styles/components/_paperclip-bootstrap.less
@@ -151,7 +151,7 @@ Last change:    18/02/2015
       font-size: 18px;
     }
     .nav-label {
-      margin-left: 10px;
+      margin-left: 2px;
     }
   }
 }
