--- a/wp-content/themes/ERS/assets/styles/components/_paperclip-components.less
+++ b/wp-content/themes/ERS/assets/styles/components/_paperclip-components.less
@@ -41,6 +41,7 @@ p {
 
   .carousel-inner > .item {
     height: 500px;
+    padding-top: 80px;
     overflow: hidden;
     background-color: @new-gray;
     background-repeat: no-repeat;
